argocd/apps/erin-apps/docspell/sea1/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: docspell-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    external-dns.alpha.kubernetes.io/target: "sea1-traefik-k8s.generalprogramming.org"
spec:
  rules:
    - host: docs.owo.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: docspell-restserver
                port:
                  name: http
---
